--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,5 +12,10 @@
   "dependencies": {
     "swiper": "^8.0.7",
     "webpack": "^5.71.0"
+  },
+  "devDependencies": {
+    "css-loader": "^6.7.1",
+    "style-loader": "^3.3.1",
+    "webpack-cli": "^4.9.2"
   }
 }
