--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "swiper": "^8.0.7",
-    "webpack": "^5.71.0"
+    "swiper": "^8.0.7"
   },
   "devDependencies": {
     "css-loader": "^6.7.1",
     "style-loader": "^3.3.1",
+    "webpack": "^5.0.0-rc.6",
     "webpack-cli": "^4.9.2"
   }
 }
